--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "plugin-template",
+  "name": "@ubiquity-os/daemon-spec-rewriter",
   "version": "1.0.0",
-  "description": "Ubiquibot plugin template repository with TypeScript support.",
+  "description": "Rewrites specification of an issue based on gihtub conversation",
   "author": "Ubiquity DAO",
   "license": "MIT",
   "main": "src/worker.ts",
-  "type": "module",
   "engines": {
     "node": ">=20.10.0"
   },
   "scripts": {
-    "build": "tsc --project tsconfig.json",
     "format": "run-p format:*",
-    "check-formatting": "run-p check-formatting:* format:cspell",
-    "check-formatting:lint": "eslint --fix-dry-run",
     "format:lint": "eslint --fix .",
     "format:prettier": "prettier --write .",
-    "check-formatting:prettier": "prettier --check .",
     "format:cspell": "cspell **/*",
     "knip": "knip --config .github/knip.ts",
     "knip-ci": "knip --no-exit-code --reporter json --config .github/knip.ts",
+    "prepare": "husky install",
     "test": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --setupFiles dotenv/config --coverage",
-    "worker": "wrangler dev --env dev --port 4000",
-    "prepare": "husky"
+    "worker": "wrangler dev --env dev --port 4000"
   },
   "keywords": [
     "typescript",
@@ -32,41 +27,45 @@
     "open-source"
   ],
   "dependencies": {
-    "@sinclair/typebox": "0.34.15",
+    "@sinclair/typebox": "0.34.3",
     "@ubiquity-os/plugin-sdk": "^3.0.0",
     "@ubiquity-os/ubiquity-os-logger": "^1.4.0",
-    "dotenv": "16.4.7",
-    "hono": "^4.6.19",
-    "ts-node": "^10.9.2"
+    "dotenv": "^16.4.5",
+    "gpt-tokenizer": "^2.5.1",
+    "openai": "^4.77.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.6.1",
-    "@commitlint/config-conventional": "19.6.0",
-    "@cspell/dict-node": "5.0.6",
-    "@cspell/dict-software-terms": "4.2.4",
-    "@cspell/dict-typescript": "3.2.0",
-    "@eslint/js": "9.19.0",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@cspell/dict-node": "^5.0.5",
+    "@cspell/dict-software-terms": "^4.1.15",
+    "@cspell/dict-typescript": "^3.1.2",
+    "@eslint/js": "9.14.0",
     "@jest/globals": "29.7.0",
-    "@mswjs/data": "0.16.2",
-    "@types/jest": "^29.5.14",
-    "@types/node": "22.12.0",
+    "@mswjs/data": "^0.16.2",
+    "@octokit/rest": "20.1.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "20.14.5",
     "cross-env": "^7.0.3",
-    "cspell": "8.17.3",
-    "eslint": "9.19.0",
-    "eslint-plugin-check-file": "3.0.0",
-    "eslint-plugin-sonarjs": "3.0.1",
-    "husky": "9.1.7",
+    "cspell": "8.9.0",
+    "eslint": "9.14.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-check-file": "2.8.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-sonarjs": "1.0.3",
+    "husky": "9.0.11",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
     "jest-md-dashboard": "0.8.0",
-    "knip": "5.43.6",
-    "lint-staged": "15.4.3",
+    "knip": "5.21.2",
+    "lint-staged": "15.2.7",
     "npm-run-all": "4.1.5",
-    "prettier": "3.4.2",
-    "ts-jest": "29.2.5",
+    "prettier": "3.3.2",
+    "ts-jest": "29.1.5",
+    "ts-node": "^10.9.2",
     "typescript": "5.6.2",
-    "typescript-eslint": "8.22.0",
-    "wrangler": "3.102.0"
+    "typescript-eslint": "8.14.0",
+    "wrangler": "^3.87.0"
   },
   "lint-staged": {
     "*.ts": [
