--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@ubiquity-os/daemon-spec-rewriter",
   "version": "1.0.0",
-  "description": "Rewrites specification of an issue based on gihtub conversation",
+  "description": "Rewrites specification of an issue based on Gihtub conversation",
   "author": "Ubiquity DAO",
   "license": "MIT",
-  "main": "src/worker.ts",
+  "main": "src/main .ts",
   "engines": {
     "node": ">=20.10.0"
   },
@@ -50,9 +50,9 @@
     "cspell": "8.9.0",
     "eslint": "9.14.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-check-file": "2.8.0",
+    "eslint-plugin-check-file": "3.1.0",
     "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-sonarjs": "1.0.3",
+    "eslint-plugin-sonarjs": "3.0.2",
     "husky": "9.0.11",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
