--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "daemon-spec-rewriter",
   "description": "Rewrites specification of an issue based on gihtub conversation",
-  "ubiquity:listeners": ["issues.labeled", "issue_comment.created"],
+  "ubiquity:listeners": ["issues.labeled"],
   "skipBotEvents": true,
   "commands": {
     "rewrite": {
