--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --setupFiles dotenv/config --coverage",
     "worker": "wrangler dev --env dev --port 4000"
   },
+  "type": "module",
   "keywords": [
     "typescript",
     "template",
