chore: fox concurrent runs and add cooldown between each sequential run

--- a/.github/workflows/compute.yml
+++ b/.github/workflows/compute.yml
@@ -20,6 +20,10 @@ on:
       command:
         description: "Command"
 
+concurrency:
+  group: ${{ fromJSON(inputs.eventPayload).issue.url }}
+  cancel-in-progress: false
+
 jobs:
   compute:
     name: "LLM Spec Rewriter"
