--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.5",
     "gpt-tokenizer": "^2.9.0",
     "hono": "^4.6.19",
+    "ms": "2.1.3",
     "openai": "^4.77.3"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "@mswjs/data": "^0.16.2",
     "@octokit/rest": "20.1.1",
     "@types/jest": "^29.5.12",
+    "@types/ms": "0.7.34",
     "@types/node": "20.14.5",
     "cross-env": "^7.0.3",
     "cspell": "8.9.0",
